# llm_psychology

./: .dockerignore  .env.example  .env.test  .env.usertest.template  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_IMPLEMENTATION_REPORT.md  ARCHITECTURE_REDESIGN.md  BACKEND_API_VERIFICATION_RESULTS.md  CLAUDE.md  DELETABLE_FILES.md  DOCKER_COMPOSE_REFACTORING.md  Dockerfile  Dockerfile.devcontainer  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_RECOMMENDATIONS.md  INTEGRATION_TESTING_STRATEGY.md  Makefile  PATIENT_FLOW_ANALYSIS.md  PHASE_3_IMPLEMENTATION_PLAN.md  PHASE_3_IMPLEMENTATION_PLAN_REVISED.md  PHASE_3_LOCAL_IMPLEMENTATION_PLAN.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  README.md  REAL_LLM_TEST_DEBUG_PLAN.md  SCHEMA_VERSIONING_IMPLEMENTATION.md  SESSION_COMPLETION_SUMMARY.md  STYLE_DETECTION_ASSESSMENT.md  deployment_validation.py  docker-compose.override.yml  docker-compose.probe-deterministic.yml  docker-compose.probe-intake-notes.yml  docker-compose.probe.yml  docker-compose.yml  out  out_e2e  out_test  out_test_all  (+18 more)
.agent/rules/: design-principles.md
.claude/: settings.local.json
.clinerules/: prompt-engineering.md  python-style-guide.md  rules.md
.devcontainer/: devcontainer.json  init_firewall.sh
.github/workflows/: architecture-governance.yml  docs-governance.yml  release-candidate-validation.yml  type-safety.yml
.opencode/plans/: workflow_probe_assessment_mitigation_plan.md  workflow_probe_fix_plan.md  workflow_probe_per_patient_model_plan.md
console-ui/: Dockerfile  Dockerfile.probe  __init__.py  main.py  requirements-probe.txt  requirements.txt
console-ui/src/: __init__.py  auth.py  base_ui.py  console_client.py  db_export.py  event_sink.py  input_providers.py  llm_user_simulator.py  output.py  protocol_recorder.py  textual_ui.py  user_simulator_smoke.py  version_check.py  websocket_protocol.py  workflow_probe_runner.py
data/: psychoanalyst.db-shm  psychoanalyst.db-wal  psychoanalyst_test.db  psychoanalyst_usertest.db  psychoanalyst_usertest.db-shm  psychoanalyst_usertest.db-wal
data/domain_knowledge/: cbt.md  freud.md  jung.md
data/vector_db_usertest/: data.pkl
doc/: onboarding.md
docs/: ARCHITECTURE.md  DESIGN_PRINCIPLES.md  DOCS_GOVERNANCE.md  FUTURE_FEATURES_ROADMAP.md  QUICKSTART.md  README.md  TECH_STACK.md  TYPE_SYSTEM.md  WEBSOCKET_PROTOCOL.md  data-models.md  design-principles.md  onboarding.md  safety-and-data.md  session_block_lifecycle.md  session_lifecycle.md  ui-scope.md  user_journey.md
docs/adr/: 0001-single-user-api-modular-monolith.md  0002-asyncio-fastapi-runtime.md  0003-workflow-stage-command-operation-model.md  0004-single-sqlite-store-and-schema-reset.md  0005-phase-processors-and-llm-gateway.md
docs/agents/: README.md  note_taker_agent.md  trio_assessment_agent.md  trio_intake_agent.md  trio_memory_agent.md  trio_planning_agent.md  trio_psychoanalyst_agent.md  (+2 more)
docs/todo/: todos.md  (+3 more)
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  TYPE_MIGRATION_GUIDE.md  eslint.config.js  index.html  integration.md  jest.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
migrations/: 001_initial_schema.sql  002_add_performance_indexes.sql  add_session_briefing.py
schemas/: ws_protocol.json
scripts/: check_architecture_budgets.py  devcontainer_test.py  extract_baseline_sha.py  fix_e501.py  generate_schemas.py  generate_ws_protocol.py  inspect_db.py  install-hooks.sh  measure_codebase.py  measure_phase1_baseline.sh  pre-commit  pre-push  probe_deterministic.sh  probe_intake_notes.sh  probe_local_llm.sh  purge_databases.py  reset_to_post_intake.py  test_db_insert.py  trigger_assessment.py  validate_docs_metadata.py  validate_refactor_phase_1.py  validate_refactor_phase_4.py  validate_refactor_phase_5.py  validate_refactor_phase_6.py  validate_schemas.py
src/: api_server.py  config.py  e2e_server.py  exceptions.py  main.py  server.py  test_intake_assessment.py  trio_server.py  unified_server.py
tests/: README.md  check_actual_db.py  check_db.py  conftest.py  console_probe_support.py  jung_api_fixtures.py  load_test_runner.py  reproduce_hang.py  reproduce_rate_limit_sharing.py  run_tests.py  test_basic_functionality.py  test_db_writing.py  test_dev_setup.py  test_devcontainer.py  test_entry_points.py  test_intake_assessment.py  test_profile_creation.py  test_resume_flow.py  test_short_session.py  test_style_service.py  test_trio_validation.py  test_user_profile_creation.py
todos/: 00-overview-task-summary.md  01-react-frontend-framework-COMPLETED.md  02-real-time-communication-COMPLETED.md  03-progress-visualization-dashboard.md  04-personalization-user-preferences.md  05-user-authentication-framework-COMPLETED.md  06-data-security-encryption.md  07-security-monitoring-logging.md  08-backup-recovery-system.md  09-session-analytics-engine.md  10-advanced-progress-tracking.md  11-enhanced-therapy-features.md  12-final-integration-polish.md  IMPLEMENTATION_SUMMARY.md  Makefile.web  QUICK_START.md  WEB_INTERFACE_GUIDE.md  docker-compose.web-dev.yml  docker-compose.web.yml  start-web-development.sh  start-web-production.sh  stop-web.sh  verify-setup.py
(+816 files in other folders)
