[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychoanalyst-app"
version = "0.1.0"
description = "Virtual LLM-driven therapist backend services"
requires-python = ">=3.11"
authors = [{ name = "Therapist Team" }]
dependencies = [
    "langchain==1.0.8",
    "langchain-google-genai",
    "langchain-ollama==1.0.0",
    "langchain-openai==1.0.3",
    "langchain-community",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "typing-extensions==4.15.0",
    "python-multipart>=0.0.6",
    "trio",
    "quart",
    "hypercorn",
    "trio-websocket",
    "quart-trio",
    "quart-cors",
]

[project.scripts]
psychoanalyst-server = "psychoanalyst_app.server:cli"
psychoanalyst-db = "psychoanalyst_app.tools.db_backup:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"psychoanalyst_app" = ["styles/**/*", "prompts/**/*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # mccabe
    "B",    # bugbear
    "UP",   # pyupgrade
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_google_genai.*",
    "sentence_transformers.*",
    "google.generativeai.*",
    "textual.*",
    "dotenv.*",
    "pydantic.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true
