[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychoanalyst-app"
version = "0.1.0"
description = "Virtual LLM-driven therapist backend services"
requires-python = ">=3.11"
authors = [{ name = "Therapist Team" }]
dependencies = [
    "openai>=1.68.0",
    "langchain-core",
    "langchain-google-genai",
    "langchain-ollama==1.0.0",
    "langchain-openai==1.0.3",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "typing-extensions==4.15.0",
    "python-multipart>=0.0.6",
    "fastapi",
    "uvicorn",
    "httpx",
    "websockets",
    "trio",
    "quart",
    "hypercorn",
    "trio-websocket",
    "quart-trio",
    "quart-cors",
]

[project.scripts]
psychoanalyst-server = "psychoanalyst_app.server:cli"
jung-api = "jung.api.app:cli"
jung-console = "jung.client.terminal:cli"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"psychoanalyst_app" = ["styles/**/*", "prompts/**/*"]
"jung.persistence" = ["schema.sql"]
"jung.styles" = ["*/*.txt"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # mccabe
    "B",    # bugbear
    "UP",   # pyupgrade
]

[tool.ruff.lint.mccabe]
max-complexity = 32

[tool.ruff.lint.per-file-ignores]
"src/jung/api/routes.py" = ["B008"]
"**/prompts.py" = ["E501"]
"tests/**" = ["C901", "E501", "E402"]
"src/psychoanalyst_app/orchestration/response_handler.py" = ["C901"]
"src/psychoanalyst_app/agents/therapist/prompt_context.py" = ["C901"]
"src/jung/persistence/sqlite_store.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_google_genai.*",
    "google.generativeai.*",
    "dotenv.*",
    "pydantic.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true
