[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jung"
version = "0.1.0"
description = "Local single-user therapy workflow runtime (jung-api / jung-console)"
requires-python = ">=3.11"
authors = [{ name = "Therapist Team" }]
dependencies = [
    "openai>=1.68.0",
    "python-dotenv",
    "pydantic",
    "fastapi",
    "uvicorn",
    "httpx",
    "websockets",
]

[project.scripts]
jung-api = "jung.api.app:cli"
jung-console = "jung.client.terminal:cli"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"jung.persistence" = ["schema.sql"]
"jung.styles" = ["*/*.txt"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "UP",
]

[tool.ruff.lint.mccabe]
max-complexity = 32

[tool.ruff.lint.per-file-ignores]
"src/jung/api/routes.py" = ["B008"]
"**/prompts.py" = ["E501"]
"tests/**" = ["C901", "E501", "E402"]
"src/jung/persistence/sqlite_store.py" = ["E501"]
